# OMTP

./: .gitignore  README.md  frames.gv
devel/: .catkin  _setup_util.py  local_setup.sh
logs/omtp_lecture3/: build.cmake.000.log.stderr  build.make.000.log.stderr
omtp_support/urdf/: omtp_factory.xacro
src/factory_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/omtp_factory_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/omtp_lecture2/: CMakeLists.txt
src/omtp_lecture3/: CMakeLists.txt
src/omtp_lecture7/src/omtp_lecture7/: CMakeLists.txt  Lecture7README.txt  package.xml
src/omtp_lecture7/src/omtp_lecture7/MATLAB/DMP_lib/: DMP_integrate.m  DMP_lrlearn.m  DMP_rlearn.m  LearnJDMP.m  LearnQDMP.m  MoveDMP_gazebo.asv  MoveDMP_gazebo.m  Test_CDMP.m
src/omtp_lecture7/src/omtp_lecture7/MATLAB/ROS_lib/: Jmove_Ros.m
src/omtp_lecture8/: CMakeLists.txt  package.xml
src/omtp_lecture8/MATLAB/ROS_lib/: CloseHand.m  Jmove_Ros.m  getForce.m  get_Panda_data.m  init_Panda.m
src/omtp_lecture8/MATLAB/Robot_lib/: DMP_grasp.m  JmoveM.m  Test_move_grasp.m  ikin_Panda.m
src/omtp_lecture8/MATLAB2/DMP_lib/: DMP_rlearn.asv  Test_CDMP.asv  Test_CDMP.m
src/omtp_lecture8/MATLAB2/ROS_lib/: CmoveM_Ros.m  CmoveM_Ros_Force.m  Move_Trj.m  init_Panda.m  send2Arm.m  send2Hand.m
src/omtp_lecture8/MATLAB2/Robot_lib/: CmoveFor.m  CmoveFor_Force.m  JmoveTrj.m  Test_move_grasp.m  Test_move_grasp_DMP.asv  Test_move_grasp_DMP.m  Test_move_grasp_force.m  fkin_Panda.m  ikin_Panda.m
src/omtp_lecture8/MATLAB2/Robot_lib/DMP_lib/: DMP_integrate.m  DMP_rlearn.m  DMP_train_quat.m  LearnJDMP.m  MoveDMP_gazebo.m  Move_LinDMP.m  Test_CDMP.m  qDMP_integrate.m  qDMP_learn.m
src/omtp_lecture8/config/: ros_controllers.yaml
src/omtp_lecture8/launch/: omtp_force.launch
src/omtp_lecture8/urdf/: omtp_force.urdf.xacro
src/omtp_lecture8/worlds/: box_world.world
(+146 files in other folders)
