<?xml version="1.0"?>
<package format="2">
  <name>omtp_lecture8</name>
  <version>0.0.0</version>
  <description>The omtp_lecture8 package</description>

  <maintainer email="alk@mmmi.sdu.dk">Aljaz Kramberger</maintainer>

  <license>TODO</license>

  <author email="alk@mmmi.sdu.dk">Aljaz Kramberger</author>
  <author email="sb@mp.aau.dk">Simon Bøgh</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>franka_description</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>franka_description</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>rospy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
